data/all_generated_tests/raw_wast_tests/br_if_EdgeCaseFailuresinbr_table_1937.wast
;; 8. **Test Description**:    - **Constraint Checked**: Type matching of branch targets.    - **Details**: Set up a `br_table` targeting various blocks with mismatched input and output types, ensuring errors are thrown for type mismatches.    - **Relation to Edge Case**: Ensures type constraints are respected in dynamic branching, with errors promptly signaled in `wizard_engine` for mismatches.

(assert_invalid
  (module 
    (func $test_br_if 
      (block (result i32)
        (br_if 0 (i32.const 1) (f64.const 0.0)) 
        (i32.const 1)
      )
    )
  )
  "type mismatch"
)